--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "tsx server.ts",
     "build": "tsc",
-    "start": "node dist/server.ts"
+    "start": "node dist/server.js"
   },
   "dependencies": {
     "axios": "^1.13.5",
@@ -17,17 +17,16 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "typescript": "^5.3.3",
+    "tsx": "^4.21.0"
   },
-  "typescript": "^5.3.3",
-  "tsx": "^4.21.0"
-},
-"devDependencies": {
-  "@types/bcrypt": "^5.0.2",
-  "@types/cors": "^2.8.17",
-  "@types/crypto-js": "^4.2.2",
-  "@types/express": "^4.17.21",
-  "@types/jsonwebtoken": "^9.0.5",
-  "@types/node": "^20.10.0"
-}
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/crypto-js": "^4.2.2",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.10.0"
+  }
 }
