--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,14 +19,13 @@
     "mongoose": "^8.0.0",
     "socket.io": "^4.6.1",
     "typescript": "^5.3.3",
-    "tsx": "^4.21.0"
-  },
-  "devDependencies": {
+    "tsx": "^4.21.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.0"
-  }
+  },
+  "devDependencies": {}
 }
