--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -10,6 +10,7 @@ JWT_EXPIRES_IN=7d
 # Server Configuration
 PORT=3000
 NODE_ENV=production
+FRONTEND_URL=https://chitchat-vert-alpha.vercel.app
 
 # AES Encryption Key (Must be 32 bytes/base64 encoded for your message encryption)
 AES_KEY=your_base64_encryption_key_here
