Additional features added

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -14,3 +14,9 @@ FRONTEND_URL=https://chitchat-vert-alpha.vercel.app
 
 # AES Encryption Key (Must be 32 bytes/base64 encoded for your message encryption)
 AES_KEY=your_base64_encryption_key_here
+
+# Cloudinary Configuration (For file uploads)
+# Sign up at https://cloudinary.com/ to get these credentials
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
