--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,12 +25,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "multer": "^2.0.2",
+    "@types/multer": "^2.0.0",
     "multer-storage-cloudinary": "^4.0.0",
     "socket.io": "^4.6.1",
     "tsx": "^4.21.0",
     "typescript": "^5.3.3"
   },
-  "devDependencies": {
-    "@types/multer": "^2.0.0"
-  }
+  "devDependencies": {}
 }
